# web

./: .editorconfig  .gitignore  .gitmodules  .htaccess  .pre-commit-config.yaml  .pyup.yml  Dockerfile  LICENSE.rst  Makefile  README.md  README.rst  TODO.md  apps.html  bio.php  bucketlist.html  calendar.php  circle.yml  design.html  docker-compose.override.yml  docker-compose.yml  etc.html  food.html  homepage.css  homepage.php  homepage.scss  index.html  index.php  learn.html  lip.html  manage.py  morse.html  mypy.ini  nav.inc.php  newrelic.ini  notes.html  notes.php  post1.php  post10.php  post11.php  post2.php  (+20 more)
site/: Makefile  build.py  pyproject.toml  requirements.txt  security.txt  utils.py
site/blog/: 2011-09-14-lip-1.md  2011-09-28-lip-2.md  2011-12-07-lip-5.md  2012-02-08-lip-6.md  2012-05-20-ibid.md  2012-08-28-cholakis.md  2013-09-02-oracle.md  2014-05-04-wriber.md  2015-10-17-jarvis.md  2015-12-04-courses.md  2015-12-30-drums-beat.md  2016-01-03-allen.md  2016-01-19-jarvis-rewrite.md  2016-08-23-greenlet-old-python.md  2016-11-18-python-in-docker.md  2017-02-21-darkest-nights.md  2017-04-07-curse-of-strahd.md  2017-05-28-bravery.md  2017-07-11-cuba.md  2018-01-03-python-datetimes.md  2019-06-08-tensorflow-model-optimization.md  2019-06-15-http-auth-with-google-kms.md  2019-08-05-dockerfile-bootable-vm.md  2020-04-13-effective-mentorship.md  2020-04-27-gke-multicluster-lifecycles.md  2021-07-23-oss-project-release-notes.md
site/builder/: data.cache  latlng.cache  main.py  map.py  utils.py
site/pages/: 2011-09-14-lip-1.md  2011-12-07-lip-5.md  2012-02-08-lip-6.md  2012-05-20-ibid.md  2015-12-30-drums-beat.md  2017-02-21-darkest-nights.md  2017-07-11-cuba.md
site/pages/blog/: 2012-05-20-ibid.md  2012-08-28-cholakis.md  2015-12-04-courses.md  2016-11-18-python-in-docker.md  2017-05-28-bravery.md  2017-07-11-cuba.md  2019-06-08-tensorflow-model-optimization.md  2019-06-15-http-auth-with-google-kms.md  2019-08-05-dockerfile-bootable-vm.md  2020-04-13-effective-mentorship.md  2020-04-27-gke-multicluster-lifecycles.md  2021-07-23-oss-project-release-notes.md
site/pages/reviews/: a-black-comedy.md  pact.md  (+67 more)
site/src/: data.cache  latlng.cache  main.py  map.py
site/static/: pgp.txt  security.txt
site/templates/: 404.html  blog.html  cocktails.html  feed.xml  index.html  layout.html  post.html  publications.html  review.html  reviews.html  travel.html
(+187 files in other folders)
