[tool.poetry]
name = "builder"
version = "1.0.0"
description = ""

repository = "https://github.com/TheKevJames/web"
authors = ["Kevin James <KevinJames@thekev.in>"]

[tool.poetry.scripts]
freeze = "builder.main:cli"

[tool.poetry.dependencies]
python = ">=3.11, <3.13"  # TODO: find a replacement for geocoder
flask = "3.0.1"
flask-flatpages = "0.8.2"
frozen-flask = "1.0.1"
geocoder = "1.38.1"
kaleido = "0.2.1"
pandas = "2.1.4"
plotly = "5.18.0"
pygments = "2.17.2"

[[tool.poetry.source]]
name = "pypi"
priority = "primary"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
