[tool.poetry]
name = "src"
version = "1.0.0"
description = ""

repository = "https://github.com/TheKevJames/web"
authors = ["Kevin James <KevinJames@thekev.in>"]

[tool.poetry.scripts]
cache = "src.map:cache"
draw = "src.map:draw"
render = "src.main:render"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
geopy = "2.4.1"
jinja2 = "3.1.3"
markdown = "3.5.2"
kaleido = "0.2.1"
pandas = "2.2.2"
plotly = "5.20.0"
pygments = "2.17.2"

[tool.poetry.group.resolution.dependencies]
pyarrow = "15.0.2"  # Pandas v3, or https://github.com/pandas-dev/pandas/issues/54466

[[tool.poetry.source]]
name = "pypi"
priority = "primary"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
