[project]
name = "src"
version = "1.0.0"
description = ""
requires-python = ">=3.11,<4.0"

authors = [
    { name = "Kevin James", email = "KevinJames@thekev.in" },
]

dependencies = [
    "geopy==2.4.1",
    "jinja2==3.1.6",
    "markdown==3.8.2",
    "kaleido==1.0.0",
    "pandas==2.3.1",
    "plotly==6.2.0",
    "pygments==2.19.2",
]

[project.urls]
repository = "https://github.com/TheKevJames/web"

[project.scripts]
cache = "src.map:cache"
draw = "src.map:draw"
render = "src.main:render"

[tool.poetry]
requires-poetry = ">=2.0"
package-mode = true

[tool.poetry.dependencies]
python = ">=3.11,<4.0"

[tool.poetry.group.resolution.dependencies]
pyarrow = "21.0.0"  # Pandas v3, or https://github.com/pandas-dev/pandas/issues/54466

[[tool.poetry.source]]
name = "pypi"
priority = "primary"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
